# baseball-manager

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  roster_positions.md  scoring_categories.md
src/baseball_manager/: cli.py  config.py
src/baseball_manager/api/: yahoo_client.py
src/baseball_manager/auth/: yahoo_oauth.py
src/baseball_manager/browser/: lineup_setter.py  transactions.py  yahoo_browser.py
src/baseball_manager/data/: fangraphs.py  mlb_schedule.py
src/baseball_manager/draft/: board.py  values.py
src/baseball_manager/lineup/: optimizer.py
src/baseball_manager/roster/: waivers.py
src/baseball_manager/scripts/: launchd.py  scheduler.py
